@@ -4,21 +4,29 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import dev.slne.data.api.DataApi;
+import dev.slne.surf.shop.api.shop.Shop;
+import dev.slne.surf.shop.api.shop.ShopManager;
 import dev.slne.surf.shop.server.shop.visualizer.ShopVisualizerTask;
+import dev.slne.surf.shop.server.util.UUIDDataType;
+import org.bukkit.OfflinePlayer;
+import org.bukkit.block.Chest;
 import org.bukkit.entity.Player;
+import org.jetbrains.annotations.NotNull;
 
-public class ShopManager {
+public class ServerShopManager implements ShopManager {
 
     private List<ServerShop> shops;
     private boolean fetched;
     private final ShopVisualizerTask visualizerTask;
 
     /**
-     * A new {@link ShopManager} instance
+     * A new {@link ServerShopManager} instance
      */
-    public ShopManager() {
+    public ServerShopManager() {
         this.shops = new ArrayList<>();
         this.fetched = false;
         this.visualizerTask = new ShopVisualizerTask();
@@ -29,7 +37,7 @@ public class ShopManager {
      *
      * @return the {@link CompletableFuture} instance
      */
-    public CompletableFuture<List<ServerShop>> fetchShops() {
+    public CompletableFuture<List<Shop>> fetchShops() {
         this.fetched = false;
 
         return ServerShop.shops().thenApplyAsync(fetchedShops -> {
@@ -42,7 +50,7 @@ public class ShopManager {
 
             DataApi.getDataInstance().logInfo(getClass(), "Fetched " + fetchedShops.size() + " shops");
 
-            return fetchedShops;
+            return fetchedShops.stream().map(ServerShop::inter).collect(Collectors.toList());
         }).exceptionally(throwable -> {
             DataApi.getDataInstance().logError(getClass(), "Failed to fetch shops", throwable);
             return null;
@@ -73,19 +81,22 @@ public class ShopManager {
     /**
      * @return the shops
      */
-    public List<ServerShop> getShops() {
-        return shops;
+    public List<Shop> getShops() {
+        return shops.stream().map(ServerShop::inter).toList();
     }
 
-    /**
-     * Returns a list of {@link ServerShop} instances by the given {@link Player}
-     *
-     * @param player the player
-     * @return the list of {@link ServerShop} instances
-     */
-    public List<ServerShop> getShops(Player player) {
-        return shops.stream().filter(shop -> shop.getOwner() != null && shop.getOwner().equals(player))
-                .toList();
+    @Override
+    public List<Shop> getShopsByOwner(UUID owner) {
+        return Stream.of(shops)
+                .flatMap(List::stream)
+                .filter(shop -> shop.getOwner().getUniqueId().equals(owner))
+                .map(ServerShop::inter)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<Shop> getShopsByOwner(@NotNull OfflinePlayer owner) {
+        return getShopsByOwner(owner.getUniqueId());
     }
 
     /**
@@ -94,6 +105,7 @@ public class ShopManager {
      * @param uuid the uuid
      * @return the {@link ServerShop} instance
      */
+    @Override
     public ServerShop getShop(UUID uuid) {
         return shops.stream().filter(shop -> shop.getUUID().equals(uuid)).findFirst().orElse(null);
     }
@@ -116,22 +128,29 @@ public class ShopManager {
         return fetched;
     }
 
-    /**
-     * Adds a {@link ServerShop} instance to the list
-     *
-     * @param shop the shop
-     */
-    public void addShop(ServerShop shop) {
-        shops.add(shop);
+    @Override
+    public void addShop(Shop shop) {
+        if (!(shop instanceof ServerShop serverShop)) {
+            throw new IllegalArgumentException("Shop is not a ServerShop");
+        }
+
+        shops.add(serverShop);
     }
 
-    /**
-     * Removes a {@link ServerShop} instance from the list
-     *
-     * @param shop the shop
-     */
-    public void removeShop(ServerShop shop) {
-        shops.remove(shop);
+    @Override
+    public void removeShop(Shop shop) {
+        if (!(shop instanceof ServerShop serverShop)) {
+            throw new IllegalArgumentException("Shop is not a ServerShop");
+        }
+
+        shops.remove(serverShop);
+    }
+
+    @Override
+    public void makeShop(Chest chest, Shop shop) {
+        chest.getPersistentDataContainer().set(Shop.CREATED_SHOP_KEY, UUIDDataType.UUID, shop.getUUID());
+
+        chest.update();
     }
 
     /**
@@ -140,5 +159,4 @@ public class ShopManager {
     public ShopVisualizerTask getVisualizerTask() {
         return visualizerTask;
     }
-
 }
